--- a/website_root/styles/global.css
+++ b/website_root/styles/global.css
@@ -211,7 +211,7 @@ span.psw {
 .loginModal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 9999; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
